--- a/index.html
+++ b/index.html
@@ -2,12 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>Clock Challenge</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div class="app">
+      <p class="textual-info hour-quarter"></p>
+      <p class="textual-info hour-half"></p>
+      <div class="clock">
+        <div class="face">
+          <div class="direction hand hours-hand"></div>
+          <div class="direction hand minutes-hand"></div>
+          <div class="direction hand seconds-hand"></div>
+          <div class="hand-center"></div>
+        </div>
+      </div>
+      <div class="toolbar">
+        <button class="button time-shift-dec">-10 minutes</button>
+        <div class="time-shift"></div>
+        <button class="button time-shift-inc">+5 minutes</button>
+      </div>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
